# meggie_sourceanalysis

./: .gitignore  CHANGES.rst  MANIFEST.in  Makefile  README.md  pyproject.toml  release_pypi.sh  requirements.txt  setup.py
.github/workflows/: check.yml
meggie_sourceanalysis/: configuration.json
meggie_sourceanalysis/actions/coregistration_coregister/: __init__.py  configuration.json
meggie_sourceanalysis/actions/coregistration_delete/: __init__.py  configuration.json
meggie_sourceanalysis/actions/coregistration_info/: __init__.py  configuration.json
meggie_sourceanalysis/actions/covariance_create/: __init__.py  configuration.json
meggie_sourceanalysis/actions/covariance_delete/: __init__.py  configuration.json
meggie_sourceanalysis/actions/covariance_info/: __init__.py  configuration.json
meggie_sourceanalysis/actions/inverse_create/: __init__.py  configuration.json
meggie_sourceanalysis/actions/inverse_delete/: __init__.py  configuration.json
meggie_sourceanalysis/actions/inverse_info/: __init__.py  configuration.json
meggie_sourceanalysis/actions/source_spectrum_create/: __init__.py  configuration.json
meggie_sourceanalysis/actions/source_spectrum_delete/: __init__.py  configuration.json
meggie_sourceanalysis/actions/source_spectrum_info/: __init__.py  configuration.json
meggie_sourceanalysis/actions/source_spectrum_plot/: __init__.py  configuration.json
meggie_sourceanalysis/datatypes/coregistration/: configuration.json  coregistration.py
meggie_sourceanalysis/datatypes/covariance/: configuration.json  covariance.py
(+20 files in other folders)
